@@ -48,3 +48,17 @@ func TestGobEncodeDecode(t *testing.T){
 		t.Errorf("saved user doesn't seem to be equal to original: %v vs %v", c2, c)
 	}
 }
+
+func TestActionAtADistance(t *testing.T) {
+	c, _ := New("foo2")
+	gob.Register(c)
+	c.Save()
+	c2, _ := Get("foo2")
+	if c.Name != c2.Name {
+		t.Errorf("Client names should have been the same, but weren't, got %s and %s", c.Name, c2.Name)
+	}
+	c2.Validator = true
+	if c.Validator == c2.Validator {
+		t.Errorf("Changing the value of validator on one client improperly changed it on the other")
+	}
+}
